Add `require_step_preivew` param to `Query Job` api
